--- a/nbn/bower.json
+++ b/nbn/bower.json
@@ -3,7 +3,12 @@
   "private": true,
   "dependencies": {
     "jquery": "~1.11.1",
-    "highcharts": "~4.1.5",
-    "underscore": "~1.8.3"
+    "underscore": "~1.8.3",
+    "highstock": "~3.0.1"
+  },
+  "overrides": {
+    "highstock": {
+      "main": "js/highstock.src.js"
+    }
   }
 }
